# statsbomb2023

./: README.md  pyproject.toml
config/: config.yaml
config/dataset/: debug.yaml  predict_enc.yaml  test_sb23.yaml  train.yaml  train_sb23.yaml  train_sm.yaml
config/experiment/: encoder.yaml  gssoccermap.yaml  soccermap.yaml
config/train_cfg/: pytorch.yaml  pytorch_gpu.yaml
notebooks/: analize_vectors.ipynb
statsbomb2023/: __init__.py  __main__.py  encoder.py  gssoccermap.py  modules.py  soccermap.py
statsbomb2023/common/: datasets.py  features.py  labels.py  utils.py
statsbomb2023/common/databases/: __init__.py  base.py  hdf.py
