[tool.poetry]
name = "statsbomb2023"
version = "0.1.0"
description = "Implementation of proposed project for StatsBomb 2023 Conference"
authors = ["Deniz Can Oruc <denizcan.oruc@kuleuven.be>","Pieter Robberechts <pieter.robberechts@kuleuven.be>"]
classifiers = [
    "Development Status :: 1 - Planning",
]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
socceraction = { git = "https://github.com/ML-KULeuven/socceraction", branch = "master" }
rich = "^12.4.4"
mlflow = "^1.27.0"
statsbombpy = "^1.4.3"
hydra-core = "^1.2.0"
xgboost = "^1.6.1"
hydra-optuna-sweeper = "^1.2.0"
pytorch-lightning = "^1.6.5"
mplsoccer = "^1.1.2"
hydra-ray-launcher = "^1.2.0"
typer = "^0.6.1"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
isort = "^5.10.1"
mypy = "^0.961"
pytest = "^7.1.2"
flake8 = "^4.0.1"
pre-commit = "^2.19.0"
pre-commit-hooks = "^4.3.0"
darglint = "^1.8.1"
pep8-naming = "^0.13.0"
flake8-docstrings = "^1.6.0"
flake8-rst-docstrings = "^0.2.6"
pyupgrade = "^2.34.0"
pytest-lazy-fixture = "^0.6.3"

[tool.poetry.scripts]
unxpass = "unxpass.__main__:app"

[tool.black]
line-length = 99
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
force_single_line = false
lines_after_imports = 2

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
